fix css html files and scrollbar

--- a/src/static/index.css
+++ b/src/static/index.css
@@ -33,6 +33,7 @@ body {
 #images {
   padding: 2em;
   overflow-y: auto;
+  height: 95%;
 }
 
 #results {
